@@ -28,13 +28,13 @@ import java.sql.Driver;
 public final class DriverLoader extends URLClassLoader {
 
     private static final String POSTGRES_JAR =
-            "http://repo1.maven.org/maven2/postgresql/postgresql/9.1-901.jdbc4/postgresql-9.1-901.jdbc4.jar";
+            "http://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.2/postgresql-42.2.2.jar";
 
     private static final String MYSQL_JAR =
-            "http://central.maven.org/maven2/mysql/mysql-connector-java/5.1.34/mysql-connector-java-5.1.34.jar";
+            "http://central.maven.org/maven2/mysql/mysql-connector-java/5.1.46/mysql-connector-java-5.1.46.jar";
 
     private static final String MARIADB_JAR =
-            "http://repo1.maven.org/maven2/org/mariadb/jdbc/mariadb-java-client/1.1.8/mariadb-java-client-1.1.8.jar";
+            "http://repo1.maven.org/maven2/org/mariadb/jdbc/mariadb-java-client/2.2.5/mariadb-java-client-2.2.5.jar";
 
     private static final String POSTGRES_CLASS_DRIVER = "org.postgresql.Driver";
 
@@ -97,9 +97,8 @@ public final class DriverLoader extends URLClassLoader {
                     System.setProperty("http.proxyPassword", proxyPwd);
                 }
             }
-            final URL[] url = { new URL(driverUrl) };
-            DRIVER_LOADER = new DriverLoader(url);
-            driver = (Driver) DRIVER_LOADER.loadClass(driverClassName).newInstance();
+            DRIVER_LOADER = new DriverLoader(new URL[] { new URL(driverUrl) });
+            driver = (Driver) DRIVER_LOADER.loadClass(driverClassName).getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             // ignore
         }
